added header nav to index

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -40,10 +40,10 @@ footer {
 /* begin styles for header navigation */
 
 header {
-  margin-top: 20px;
+  padding-top: 20px;
   margin-bottom: 15%;
   min-width: 85%;
-
+  background-color: #5E5E5E;
 }
 
 .logo {
@@ -53,11 +53,12 @@ header {
 .helpbtn, .closebtn {
   float: right;
   padding-left: 100px;
-
+  padding-right: 2%;
+  padding-top: 3%;
 }
 
 .helpbtn {
-  padding-left: 5%;
+  padding-left: 2%;
 }
 
 /* end header navigation styling */
